added "solution" to lab4

--- a/Lab01/Homework.ipynb
+++ b/Lab01/Homework.ipynb
@@ -53,7 +53,7 @@
     "MAX_ITERATION = 10\n",
     "BATCH_SIZE = 32\n",
     "LEARNING_RATE = 0.5\n",
-    "model.train_mini_batch(dataset.training_set, MAX_ITERATION, BATCH_SIZE, LEARNING_RATE)\n",
+    "model.train(dataset.training_set, MAX_ITERATION, BATCH_SIZE, LEARNING_RATE)\n",
     "\n",
     "print('Training set:')\n",
     "model.test_model(dataset.training_set)\n",
